# libssbase

./: .gitignore  LICENSE  README.md
code/: .clang-format  CMakeLists.txt  CMakeSettings.json
code/include/: libssbase.hpp  platform.h  rbtree.h
code/src/: CMakeLists.txt  rbtree.c
code/test/: CMakeLists.txt  test_main.cpp  test_rbtree.cpp
